force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Compliance_Categorization__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Compliance_Categorization__c</fullName>
    <label>Compliance Categorization</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>