force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Data_Classification_Severity_Level__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Classification_Severity_Level__c</fullName>
    <label>Data Classification Severity Level</label>
    <referenceTo>sc_ext__Data_Classification_Level__c</referenceTo>
    <relationshipLabel>Data Classification Fields</relationshipLabel>
    <relationshipName>Data_Classification_Field_Levels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>