force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Data_Owner__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Data_Owner__c</fullName>
    <label>Data Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>