force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Declassified__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Declassified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declassified</label>
    <type>Checkbox</type>
</CustomField>