force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Encrypted__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Encrypted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox shows if the Field this record represents was encrypted with Shield Platform Encryption at the time the last Security Insights job was executed.</description>
    <inlineHelpText>This checkbox shows if the Field this record represents was encrypted with Shield Platform Encryption at the time the last Security Insights job was executed.</inlineHelpText>
    <label>Encrypted</label>
    <type>Checkbox</type>
</CustomField>