force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Exposure__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Exposure__c</fullName>
    <description>The Exposure field shows the percentage of Users who can read this field</description>
    <inlineHelpText>The Exposure field shows the percentage of Users who can read this field</inlineHelpText>
    <label>Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>