force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Field_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Field_Api_Name__c</fullName>
    <label>Field Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>