force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Field_Durable_Id__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Field_Durable_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Field Durable Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>