force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Fill_Rate_Denominator__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Fill_Rate_Denominator__c</fullName>
    <label>Fill Rate Denominator</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>