force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Last_Classified_Date__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Last_Classified_Date__c</fullName>
    <label>Last Classified Date</label>
    <type>DateTime</type>
</CustomField>