force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Potential_High_Risk_Candidate__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Potential_High_Risk_Candidate__c</fullName>
    <description>Indicates if field has been flagged as potential high risk candidate via SI job. Dismissed status obtained by user excluding the field from within the SI tab.</description>
    <label>Potential High Risk Candidate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Dismissed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>