force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Sync_Message__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Sync_Message__c</fullName>
    <label>Sync Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>