force-app/main/default/objects/sc_ext__Data_Classification_Field_Level__c/fields/sc_ext__Tracked__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox shows if the Field this record represents was enabled for Field History Tracking at the time the last Security Insights job was executed.</description>
    <inlineHelpText>This checkbox shows if the Field this record represents was enabled for Field History Tracking at the time the last Security Insights job was executed.</inlineHelpText>
    <label>Tracked</label>
    <type>Checkbox</type>
</CustomField>